--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -12,7 +12,7 @@ configMapGenerator:
   name: manager-config
 
 patchesStrategicMerge:
-- enable_turbo_patch.yaml
+# - enable_turbo_patch.yaml
 # - profile_tasks_patch.yaml
 
 images:
