--- a/.lighthouse/jenkins-x/k8s.yaml
+++ b/.lighthouse/jenkins-x/k8s.yaml
@@ -100,8 +100,8 @@ spec:
           - make
           resources:
             limits:
-              cpu: 750m
-              memory: 2048Mi
+              cpu: 2
+              memory: 4096Mi
             requests:
               cpu: 0.1
               memory: 128Mi
