--- a/requirements.yml
+++ b/requirements.yml
@@ -1,14 +1,10 @@
 ---
 collections:
-  - name: community.kubernetes
-    version: "1.2.1"
+  - name: operator_sdk.util
+    version: "0.5.0"
   - name: kubernetes.core
     version: "2.4.0"
   - name: cloud.common
     version: "2.1.1"
-  - name: operator_sdk.util
-    version: "0.4.0"
-  # Git is available until ansible >= 2.10
-  # - name: https://github.com/krestomatio/ansible-collection-k8s
-  #   type: git
-  #   version: master
+  - name: community.docker
+    version: "3.4.0"
