--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,4 +4,6 @@ resources:
 images:
 - name: controller
   newName: quay.io/krestomatio/moodle-operator
-  newTag: 0.5.61
+  newTag: 0.6.0
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
