feat: add categories to crd

--- a/config/crd/bases/m4e.krestomat.io_moodles.yaml
+++ b/config/crd/bases/m4e.krestomat.io_moodles.yaml
@@ -10,6 +10,9 @@ spec:
     listKind: MoodleList
     plural: moodles
     singular: moodle
+    categories:
+    - lms
+    - m4e
   scope: Namespaced
   versions:
   - name: v1alpha1
