--- a/config/crd/bases/m4e.krestomat.io_nginxes.yaml
+++ b/config/crd/bases/m4e.krestomat.io_nginxes.yaml
@@ -10,6 +10,10 @@ spec:
     listKind: NginxList
     plural: nginxes
     singular: nginx
+    categories:
+    - lms
+    - m4e
+    - web
   scope: Namespaced
   versions:
   - name: v1alpha1
