--- a/config/crd/bases/m4e.krestomat.io_phpfpms.yaml
+++ b/config/crd/bases/m4e.krestomat.io_phpfpms.yaml
@@ -10,6 +10,10 @@ spec:
     listKind: PhpfpmList
     plural: phpfpms
     singular: phpfpm
+    categories:
+    - lms
+    - m4e
+    - web
   scope: Namespaced
   versions:
   - name: v1alpha1
