--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -78,6 +78,7 @@ spec:
         - image: quay.io/krestomatio/ansible-docker-ci
           name: container-bundle
           args:
+          - start-dockerd
           - bundle-build
           - bundle-push
           command:
