--- a/playbooks/nginx.yml
+++ b/playbooks/nginx.yml
@@ -5,5 +5,6 @@
     - kubernetes.core
     - operator_sdk.util
   tasks:
-    - import_role:
+    - name: import nginx role
+      import_role:
         name: krestomatio.k8s.v1alpha1.m4e.nginx
