ci: bump molecule submodule

--- a/.lighthouse/jenkins-x/lint.yaml
+++ b/.lighthouse/jenkins-x/lint.yaml
@@ -57,6 +57,13 @@ spec:
           workingDir: /workspace/source
         steps:
         - image: quay.io/krestomatio/ansible-operator-ci
+          name: collection
+          args:
+          - collection-build
+          command:
+          - make
+          resources: {}
+        - image: quay.io/krestomatio/ansible-operator-ci
           name: lint
           args:
           - lint
