--- a/config/manifests/bases/moodle-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/moodle-operator.clusterserviceversion.yaml
@@ -98,6 +98,12 @@ spec:
   links:
   - name: Moodle Operator
     url: https://krestomatio.com/docs/moodle-operator
+  - name: Moodle Image
+    url: https://krestomatio.com/docs/container-builder/moodle
+  - name: Moodle Repo
+    url: https://github.com/moodle/moodle
+  - name: Moodle Docs
+    url: https://docs.moodle.org/
   maintainers:
   - email: jobcespedes@krestomatio.com
     name: Job Cespedes Ortiz
