--- a/config/manifests/bases/moodle-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/moodle-operator.clusterserviceversion.yaml
@@ -5,6 +5,7 @@ metadata:
     alm-examples: '[]'
     capabilities: Seamless Upgrades
     categories: Application Runtime
+    containerImage: quay.io/krestomatio/moodle-operator
     description: |-
       This operator simplifies Moodle deployments in Kubernetes by leveraging
       the Ansible Operator SDK for automation
