--- a/config/samples/m4e_v1alpha1_moodle.yaml
+++ b/config/samples/m4e_v1alpha1_moodle.yaml
@@ -66,6 +66,9 @@ spec:
   # moodleSize: 1
   # nginxSize: 1
 
+  # Default NetworkPolicies
+  # moodleNetpolOmit: false
+
   ## php conf
   ### php.ini extra config
   phpFpmPhpExtraIni: |-
