--- a/config/rbac/moodle_viewer_role.yaml
+++ b/config/rbac/moodle_viewer_role.yaml
@@ -3,11 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: moodle-viewer-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: moodle-operator
-    app.kubernetes.io/part-of: moodle-operator
+    app.kubernetes.io/name: moodle-operator
     app.kubernetes.io/managed-by: kustomize
   name: moodle-viewer-role
 rules:
