--- a/bundle/manifests/moodle-operator-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle/manifests/moodle-operator-controller-manager-metrics-service_v1_service.yaml
@@ -3,12 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: moodle-operator
-    app.kubernetes.io/instance: controller-manager-metrics-service
+    app.kubernetes.io/name: moodle-operator
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/name: service
-    app.kubernetes.io/part-of: moodle-operator
     control-plane: controller-manager
   name: moodle-operator-controller-manager-metrics-service
 spec:
