--- a/bundle/manifests/moodle-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml
+++ b/bundle/manifests/moodle-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml
@@ -3,12 +3,8 @@ kind: ClusterRole
 metadata:
   creationTimestamp: null
   labels:
-    app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: moodle-operator
-    app.kubernetes.io/instance: metrics-reader
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/part-of: moodle-operator
+    app.kubernetes.io/name: moodle-operator
   name: moodle-operator-metrics-reader
 rules:
 - nonResourceURLs:
