--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -1,22 +1,29 @@
+# Adds namespace to all resources.
+namespace: moodle-test
+
+namePrefix: moodle-
+
+# Labels to add to all resources and selectors.
+#commonLabels:
+#  someName: someValue
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: moodle-pr-0-0-ns
-namePrefix: moodle-pr-0-0-
 resources:
 - ../crd
 - ../rbac
 - ../manager
-patchesStrategicMerge:
-- manager_image.yaml
-- debug_logs_patch.yaml
-- watch_namespace_patch.yaml
-- ../default/manager_auth_proxy_patch.yaml
-- ../manager/profile_tasks_patch.yaml
 images:
 - name: testing
-  newName: harbor.krestomat.io/kio-builds/moodle-operator
-  newTag: 66cf5e1668e0851a76466792af9e334cad0e3166
+  newName: testing-operator
 patches:
+- path: manager_image.yaml
+- path: debug_logs_patch.yaml
+- path: ../default/manager_metrics_patch.yaml
+  target:
+    kind: Deployment
+- path: watch_namespace_patch.yaml
+- path: ../manager/profile_tasks_patch.yaml
 - patch: |-
     - op: add
       path: /spec/template/spec/containers/0/args/-
@@ -32,4 +39,3 @@ patches:
       value: --ansible-args='-D'
   target:
     kind: Deployment
-- path: pull_policy/Always.yaml
