--- a/config/testing/postgres/kustomization.yaml
+++ b/config/testing/postgres/kustomization.yaml
@@ -1,8 +1,8 @@
 # Install postgres operator
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: moodle-pr-0-0-ns
-namePrefix: moodle-pr-0-0-
+namespace: moodle-test
+namePrefix: moodle-
 resources:
 - github.com/krestomatio/postgres-operator/config/default?ref=main
 patches:
@@ -13,28 +13,26 @@ patches:
   target:
     kind: Service
     name: postgres-operator-controller-manager-metrics-service
-patchesStrategicMerge:
-- |-
-  apiVersion: v1
-  kind: Namespace
-  metadata:
-    name: system
-    labels:
-      app.kubernetes.io/created-by: moodle-operator
-      app.kubernetes.io/part-of: moodle-operator
-- |-
-  apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    name: controller-manager
-    namespace: system
-  spec:
-    template:
-      spec:
-        containers:
-          - name: manager
-            env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+- patch: |-
+    apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: system
+      labels:
+        app.kubernetes.io/name: moodle-operator
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: controller-manager
+      namespace: system
+    spec:
+      template:
+        spec:
+          containers:
+            - name: manager
+              env:
+              - name: WATCH_NAMESPACE
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.namespace
